--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -3,7 +3,7 @@
 \section{Задача поиска объекта на изображении}
 
 Задача поиска объекта на изображении сводится к решению следующих подзадач~\cite{task}: 
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item сегментация~--- выделение участков изображения, которые относятся к разным объектам;
 	\item классификация~--- определение типа объекта, для каждого выделенного сегмента отдельно.
 \end{enumerate}
@@ -21,7 +21,7 @@
 Сверточные нейронные сети являются наиболее распространенным алгоритмом глубокого обучения, применяющим несколько сверхточных слоев и вычислений.
 Они предоставляют эффективные способы извлечения признаков, а также являются лучшим выбором для решения проблем обнаружения объектов.
 Текущие подходы с использованием методов глубокого обучения для задач классификации и регрессии объектов можно разделить на две категории~\cite{base}:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item двухэтапные методы, которые представлены такими архитектурами, как R-CNN, Fast R-CNN и Faster R-CNN;
 	\item одноэтапные методы, представленные различными версиями YOLO и др.
 \end{enumerate}
@@ -104,7 +104,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 К настоящему моменту имеется большое количество вариантов реализации подобных алгоритмов, которые достигли хороших показателей по данным критериям~\cite{rcnn}.
 
 Алгоритм работы R-CNN состоит из следующих основных шагов:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item выполняется генерация областей интереса (region proposals), предположительно содержащих в себе искомые объекты (обычно до 2000 возможных областей) с использованием различных алгоритмов, предназначенных для снижения вычислительной сложности обнаружения объектов на изображении (например, алгоритмы Edge Boxes, Selective search);
 	\item выполняется формирование карты признаков для исходного изображения путем аффинных преобразований, и каждая область интереса преобразуется в квадрат 227 $\times$ 227,	так как используемая архитектура CNN требует входы фиксированного размера 227 $\times$ 227	пикселей;
 	\item выполняется классификация объектов для каждой области интереса с использованием сформированного вектора признаков на основе метода опорных векторов (SVM).
@@ -135,7 +135,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 Также, при использовании R-CNN затрачивается большой объем памяти для хранения данных.
 
 Алгоритм работы Fast R-CNN состоит из следующих основных шагов~\cite{yolochina, rcnn}:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item аналогично R-CNN выполняется генерация областей интереса (region proposals);
 	\item выполняется формирование карты признаков для исходного изображения, но, в отличие от R-CNN, на вход нейронной сети CNN подается полное исходное изображение с последним слоем RoI pooling вместо Max pooling;
 	\item выполняется уточнение границ области интереса при помощи регрессионной модели (Bounding Box Regression);
@@ -170,7 +170,7 @@ Faster R-CNN представила сеть региональных предл
 Эта модификация R-CNN уже предоставила результат с эталонной точностью распознавания, поэтому единственным улучшением будет являться скорость работы, что является основной причиной появления более поздних алгоритмов~\cite{fasterrcnn}.
 
 Алгоритм работы Faster R-CNN состоит из следующих основных шагов~\cite{yolochina, rcnn, fasterrcnn}:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item выполняется формирование карты признаков на основе исходного изображения при помощи CNN;
 	\item выполняется генерация областей интереса, возможно содержащих объект, за счет обработки скользящим окном размера 3 $\times$ 3 сформированной карты признаков с использованием RPN;
 	\item выполняется преобразование вектора признаков области интереса из исходного изображения в вектор признаков фиксированной размерности с помощью слоя RoI pooling;
