--- a/parts/04-intro.tex
+++ b/parts/04-intro.tex
@@ -14,7 +14,7 @@
 
 Целью работы является сравнение алгоритмов поиска объектов на изображениях с использованием различных модификаций сверточных нейронных сетей.
 Для достижения поставленной цели необходимо решить следующие задачи:
-\begin{enumerate}[leftmargin=1.6\parindent]
+\begin{enumerate}
     \item провести анализ предметной области алгоритмов поиска объектов на изображениях;
     \item описать основные подходы к решению задачи распознавания объектов на изображениях;
     \item сформулировать критерии сравнения применяемых методов и выполнить их сравнение.
