--- a/report.tex
+++ b/report.tex
@@ -4,7 +4,7 @@
 
 \usepackage{svg}
 \setlist[itemize]{label=---}
-\setlist[enumerate]{label=\arabic*)}
+\setlist[enumerate]{label=\arabic*), leftmargin=1.6\parindent}
 
 \begin{document}
 
