--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -101,9 +101,8 @@ YOLOv2 имеет множество улучшений по сравнению 
 В последнее время для решения задачи поиска объектов на изображении широкое распространение получили алгоритмы, основанные на применении региональных глубоких сверточных нейронных сетей или Regional Convolutional Neural Networks (R-CNN), которые принципиально ориентированы на решение задачи поиска объектов с одновременной их классификацией.
 Исходная реализация таких моделей базируются на использовании специальных алгоритмов предобработки~---~алгоритмов region-proposal-function, обеспечивающих предложение так называемых областей внимания, в которых потенциально могут находиться интересующие объекты.
 Описанный подход предлагает сократить вычислительные затраты, а также позволяют добиться минимального времени определения местоположения объекта и высокой точности его классификации.
-К настоящему моменту имеется большое количество вариантов реализации подобных алгоритмов, которые достигли хороших показателей по данным критериям~\cite{rcnn}.
-
-Алгоритм работы R-CNN состоит из следующих основных шагов:
+К настоящему моменту имеется большое количество вариантов реализации подобных алгоритмов, которые достигли хороших показателей по данным критериям.
+Алгоритм работы R-CNN состоит из следующих основных шагов~\cite{rcnn}:
 \begin{enumerate}
 	\item выполняется генерация областей интереса (region proposals), предположительно содержащих в себе искомые объекты (обычно до 2000 возможных областей) с использованием различных алгоритмов, предназначенных для снижения вычислительной сложности обнаружения объектов на изображении (например, алгоритмы Edge Boxes, Selective search);
 	\item выполняется формирование карты признаков для исходного изображения путем аффинных преобразований, и каждая область интереса преобразуется в квадрат 227 $\times$ 227,	так как используемая архитектура CNN требует входы фиксированного размера 227 $\times$ 227	пикселей;
@@ -133,7 +132,6 @@ YOLOv2 имеет множество улучшений по сравнению 
 
 Модель Fast R-CNN является улучшением классической модели R-CNN, которая известна своей низкой производительностью, особенно при взаимодействии с более глубокими сетями.
 Также, при использовании R-CNN затрачивается большой объем памяти для хранения данных.
-
 Алгоритм работы Fast R-CNN состоит из следующих основных шагов~\cite{yolochina, rcnn}:
 \begin{enumerate}
 	\item аналогично R-CNN выполняется генерация областей интереса (region proposals);
