--- a/parts/TASK.tex
+++ b/parts/TASK.tex
@@ -54,7 +54,7 @@ AP (average precision)~---~популярная метрика для измер
 Исходя из полученной сравнительной таблицы~\ref{table1}, можно выделить следующие пункты:
 \begin{enumerate}
 	\item по двум из трех сформированных критериев лидирует модель YOLOv2 288 $\times$ 288, обладающая наибольшим значением FPS и PS;
-	\item наибольшей точностью обладает модель YOLOv2 544 $\times$ 544 (по критерию mAP);
+	\item наибольшей точностью обладает модель YOLOv2 544 $\times$ 544 (по критерию mAP).
 \end{enumerate}
 
 Таким образом, можно сделать вывод, что использование класса моделей YOLO может применяться в задачах поиска изображений в реальном времени, так как именно эти модификации CNN обладают наибольшим значением FPS (от 40 до 91).
