--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -3,7 +3,7 @@
 \section{Задача поиска объекта на изображении}
 
 Задача поиска объекта на изображении сводится к решению следующих подзадач~\cite{task}: 
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item сегментация~--- выделение участков изображения, которые относятся к разным объектам;
 	\item классификация~--- определение типа объекта, для каждого выделенного сегмента отдельно.
 \end{enumerate}
