--- a/parts/TASK.tex
+++ b/parts/TASK.tex
@@ -3,7 +3,7 @@
 \section{Критерии сравнения модификаций CNN}
 
 Для сравнения модификаций сверточных нейронных сетей будут использоваться следующие основные критерии~\cite{base, all, yolobase, cmp}:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item mAP;
 	\item FPS;
 	\item PS.
@@ -52,7 +52,7 @@ AP (average precision)~---~популярная метрика для измер
 \section*{Вывод}
 
 Исходя из полученной сравнительной таблицы~\ref{table1}, можно выделить следующие пункты:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item по двум из трех сформированных критериев лидирует модель YOLOv2 288 $\times$ 288, обладающая наибольшим значением FPS и PS;
 	\item наибольшей точностью обладает модель YOLOv2 544 $\times$ 544 (по критерию mAP).
 \end{enumerate}
