--- a/report.tex
+++ b/report.tex
@@ -2,7 +2,7 @@
 
 \bibliography{parts/biblio}
 
-\setlist[enumerate]{label=\arabic*), leftmargin=1.6\parindent}
+\setlist[enumerate]{label=\arabic*)}
 
 \begin{document}
 
