--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,5 @@
 \documentclass{bmstu}
+\usepackage{tocloft}
 
 \bibliography{parts/biblio}
 
@@ -15,9 +16,10 @@
 	{} % ФИО консультанта (необязательный аргумент; если консультантов несколько, их необходимо разделить запятой)
 
 \setcounter{page}{3}
+\cftsetindents{section}{\parindent}{12.5mm}
+\renewcommand{\contentsname}{СОДЕРЖАНИЕ}
+\tableofcontents
 \include{parts/essay}
-
-\maketableofcontents
 \include{parts/02-def}
 \include{parts/03-abbr}
 \include{parts/04-intro}
