--- a/report.tex
+++ b/report.tex
@@ -17,7 +17,9 @@
 
 \setcounter{page}{3}
 \include{parts/essay}
-\cftsetindents{section}{0mm}{12.5mm}
+\cftsetindents{chapter}{1.6\parindent}{12.5mm}
+\cftsetindents{section}{1.6\parindent}{12.5mm}
+\cftsetindents{subsection}{1.6\parindent}{12.5mm}
 \renewcommand{\cftaftertoctitle}{\hfill}
 \renewcommand{\contentsname}{\hfill\LARGE СОДЕРЖАНИЕ\hfill}
 \tableofcontents
