--- a/report.tex
+++ b/report.tex
@@ -20,6 +20,7 @@
 \cftsetindents{chapter}{\parindent}{12.5mm}
 \cftsetindents{section}{\parindent}{12.5mm}
 \cftsetindents{subsection}{\parindent}{12.5mm}
+\setlength{\cftbeforetoctitleskip}{-22pt}
 \renewcommand{\cftaftertoctitle}{\hfill}
 \renewcommand{\contentsname}{\hfill\LARGE СОДЕРЖАНИЕ\hfill}
 \tableofcontents
