--- a/parts/07-appendix.tex
+++ b/parts/07-appendix.tex
@@ -1,4 +1,38 @@
 \begin{appendices}
 	\chapter{}
-	Презентация к научно-исследовательской работе состоит из 7 слайдов
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.4\textheight, page=1, angle=90]{inc/img/pres.pdf}
+		\caption{Титульный лист (слайд 1)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=2, angle=90]{inc/img/pres.pdf}
+		\caption{Цель и задачи (слайд 2)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=3, angle=90]{inc/img/pres.pdf}
+		\caption{Задача поиска объекта на изображении (слайд 3)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=4, angle=90]{inc/img/pres.pdf}
+		\caption{YOLO CNN (слайд 4)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=5, angle=90]{inc/img/pres.pdf}
+		\caption{R-CNN (слайд 5)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=6, angle=90]{inc/img/pres.pdf}
+		\caption{Критерии сравнения модификаций CNN и сравнительная таблица (слайд 6)}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[height=0.5\textheight, page=7, angle=90]{inc/img/pres.pdf}
+		\caption{Заключение (слайд 7)}
+	\end{figure}
 \end{appendices}
